--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="background">#FFFFFFFF</color>
+    <color name="primary">#3398DB</color>
+    <color name="secondary">#F5F5F5</color>
+    <color name="accent">#46698B</color>
+    <color name="text">#1C1717</color>
 </resources>
