--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,9 +22,9 @@
         android:id="@+id/logo"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:src="@drawable/logo"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="8dp"
+        android:src="@drawable/logo"
         app:layout_anchor="@+id/background_top"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,8 +35,8 @@
         style="@style/textHeaderL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:lineSpacingExtra="-2sp"
         android:layout_marginStart="16dp"
+        android:lineSpacingExtra="-2sp"
         android:text="Log In"
         android:textColor="@color/cardview_light_background"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,11 +47,11 @@
     <TextView
         android:id="@+id/tvdescription"
         style="@style/textBodyL"
-        android:textColor="@color/cardview_light_background"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:text="@string/senyum"
+        android:textColor="@color/cardview_light_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvLogin" />
@@ -73,28 +73,26 @@
         app:layout_constraintTop_toBottomOf="@+id/tvdescription">
 
 
-
         <EditText
             android:id="@+id/edtEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/sign_in"
-            android:drawableStart="@drawable/ic_email"/>
+            android:drawableStart="@drawable/ic_email"
+            android:text="@string/sign_in" />
 
         <EditText
             android:id="@+id/edtPw"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="@string/log_in"
-            android:drawableStart="@drawable/ic_pw"/>
+            android:drawableStart="@drawable/ic_pw"
+            android:text="@string/log_in" />
 
         <CheckBox
+            style="@style/textBodyM"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            style="@style/textBodyM"
-            android:text="ingat saya"/>
-
+            android:text="ingat saya" />
 
 
         <com.google.android.material.button.MaterialButton
@@ -108,11 +106,11 @@
         <TextView
             android:id="@+id/btnLogin"
             style="@style/textBodyM"
-            android:textAlignment="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="Lupa Password ?" />
+            android:text="Lupa Password ?"
+            android:textAlignment="center" />
 
     </LinearLayout>
 
@@ -132,11 +130,12 @@
         android:id="@+id/groupLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:gravity="center"
         android:orientation="horizontal"
-        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/background_top"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvMasukDengan">
 
@@ -171,7 +170,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/groupLogin" />
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
