--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,7 +6,12 @@
     </style>
 
     <style name="Theme.DentifyDentalIdentify" parent="Base.Theme.DentifyDentalIdentify" />
-    
+
+
+    <style name="button">
+
+        <item name="android:fontFamily">@font/kalam_bold</item>
+    </style>
     <style name="textHeaderL">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
