Navigasi sementara karena belum ada API

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -96,7 +96,7 @@
 
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnSignIn"
+            android:id="@+id/btnLogIn"
             style="@style/textBodyM"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
